--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href='site.css' rel='stylesheet'/>
 
-    <title>React App</title>
+    <title>React Index</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
